# django-ulid

./: .gitignore  pyproject.toml
django_ulid/: __init__.py  models.py
