[project]
name = "django-ulid"
version = "0.2.0"
description = "Universally Unique Lexicographically Sortable Identifier (ULID) support in Django."
authors = [
    {name = "Andrew Hawker", email = "andrew.r.hawker@gmail.com"},
]
dependencies = [
    "ulid-py==1.1.0",
]
requires-python = ">=3.5"
readme = "README.md"
license = {text = "Apache-2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
